--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="HTML Simple Theme from CakJuice">
 	<meta name="keyword" content="HTML, CSS, Javascript, JQuery, Theme, Website, CakJuice, Simple">
-	<title>Cak Juice - Home</title>
+	<title>brasa.io</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
