--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<h4>Simple Theme &copy; <a href="https://www.facebook.com/hendra.s.juice" target="_blank">Cak Juice</a> - 2016</h4>
+				<h4>Simple Theme &copy; <a href="#" target="_blank">#</a> - 2016</h4>
 			</div>
 		</div>
 	</div>
